Tons of changes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: darkblue;
+  --ifm-color-primary-dark: darkblue;
+  --ifm-color-primary-darker: rgb(0, 0, 107);
+  --ifm-color-primary-darkest: rgb(1, 1, 66);
+  --ifm-color-primary-light: rgb(2, 2, 168);
+  --ifm-color-primary-lighter: rgb(2, 2, 194);
+  --ifm-color-primary-lightest: rgb(2, 2, 253);
   --ifm-code-font-size: 95%;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: rgb(88, 88, 250);
+  --ifm-color-primary-dark: rgb(76, 76, 243);
+  --ifm-color-primary-darker: rgb(57, 57, 243);
+  --ifm-color-primary-darkest: rgb(56, 56, 245);
+  --ifm-color-primary-light: rgb(97, 97, 248);
+  --ifm-color-primary-lighter: rgb(106, 106, 250);
+  --ifm-color-primary-lightest: rgb(120, 120, 251);
 }
 
 .docusaurus-highlight-code-line {
